k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: deval2498/baserepo-staging:PLACEHOLDER_TAG_SHA  # Change to your image
          ports:
            - containerPort: 5005
